slight font fix
didn't fit before (bold and bigger vs light and smaller) - now it's aligned (both bigger and light)

--- a/app/styles/_actorEditor.styl
+++ b/app/styles/_actorEditor.styl
@@ -27,7 +27,7 @@
     margin 8px
     width 80px
     height 80px
-    font-size 11px
+    font-size 13px
     position relative !important
     box-shadow 0 1px 1px 1px rgba(0,0,0,.34), 0 1px #fbfbfb inset, 0 -2px #f0f0f0 inset, 0 0 0 2px #f9f9f9 inset
     transition width 250ms, height 250ms, margin 250ms
@@ -41,8 +41,7 @@
     text-align center
     color rgba(0,0,0,.34)
     text-shadow 0 1px rgba(255,255,255,.13)
-    font-size 0.8em
-    font-weight bold
+    font-size 13px
     border-radius 100%
     display box
     box-align center
